; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_dxtory.c_dxtory_decode_v2_565.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_dxtory.c_dxtory_decode_v2_565.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AV_PIX_FMT_RGB24 = common dso_local global i32 0, align 4
@dx2_decode_slice_565 = common dso_local global i32 0, align 4
@setup_lru_565 = common dso_local global i32 0, align 4
@dx2_decode_slice_555 = common dso_local global i32 0, align 4
@setup_lru_555 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32*, i32, i32)* @dxtory_decode_v2_565 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dxtory_decode_v2_565(i32* %0, i32* %1, i32* %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store i32* %0, i32** %7, align 8
  store i32* %1, i32** %8, align 8
  store i32* %2, i32** %9, align 8
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  %13 = load i32, i32* @AV_PIX_FMT_RGB24, align 4
  store i32 %13, i32* %12, align 4
  %14 = load i32, i32* %11, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %25

16:                                               ; preds = %5
  %17 = load i32*, i32** %7, align 8
  %18 = load i32*, i32** %8, align 8
  %19 = load i32*, i32** %9, align 8
  %20 = load i32, i32* %10, align 4
  %21 = load i32, i32* @dx2_decode_slice_565, align 4
  %22 = load i32, i32* @setup_lru_565, align 4
  %23 = load i32, i32* %12, align 4
  %24 = call i32 @dxtory_decode_v2(i32* %17, i32* %18, i32* %19, i32 %20, i32 %21, i32 %22, i32 %23)
  store i32 %24, i32* %6, align 4
  br label %34

25:                                               ; preds = %5
  %26 = load i32*, i32** %7, align 8
  %27 = load i32*, i32** %8, align 8
  %28 = load i32*, i32** %9, align 8
  %29 = load i32, i32* %10, align 4
  %30 = load i32, i32* @dx2_decode_slice_555, align 4
  %31 = load i32, i32* @setup_lru_555, align 4
  %32 = load i32, i32* %12, align 4
  %33 = call i32 @dxtory_decode_v2(i32* %26, i32* %27, i32* %28, i32 %29, i32 %30, i32 %31, i32 %32)
  store i32 %33, i32* %6, align 4
  br label %34

34:                                               ; preds = %25, %16
  %35 = load i32, i32* %6, align 4
  ret i32 %35
}

declare dso_local i32 @dxtory_decode_v2(i32*, i32*, i32*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
